<resources>

    <string name="title_activity_login">Sign in</string>

    <!-- Login Activity -->
    <string name="app_name">Paathshala</string>
    <string name="desc_name">Managing Student Activities</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="er_usename_required">Username is required.</string>
    <string name="er_password_required">Password is required.</string>
    <string name="er_incorrect_usrname_or_password">Username or Password is incorrect</string>
    <string name="btn_fg_pass">Forgot Password</string>
    <string name="tab_attendance">Attendance</string>
    <string name="tab_academics">Academics</string>

    <string name="emptyRecentMsg">No Recent Activities</string>
    <string name="title_activity_card_row">CardRowActivity</string>

    <string name="title_activity_profile">Profile</string>
    <string name="header_text">Class A</string>
    <string name="establish_text">22nd January 2018</string>
    <string name="address_text">Mumbai 400016</string>

    <!-- Dashboard Activity -->
    <string name="chg_text">CHANGE</string>
    <string name="today_text">TODAY</string>
    <string name="lecture_text">LECTURES</string>
    <string name="events_text">EVENTS</string>
    <string name="attendance_text">ATTENDANCE</string>
    <string name="title_activity_db">Dashboard</string>
    <string name="batch_text">10:00 AM CLASS A Room No 2</string>
    <string name="attendance_btn">TAKE ATTENDANCE</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_view_edit_attendance">View and Edit Attendance</string>
    <string name="menu_classes">Classes</string>
    <string name="menu_students">Students</string>
    <string name="menu_add_edit_performance">Add and Edit Performance</string>
    <string name="menu_attendance_report">Attendance Report</string>
    <string name="lbl_dashboard">Dashboard</string>
    <string name="lbl_Attendance">Attendance</string>
    <string name="menu_legal">Legal</string>
    <string name="menu_logout">Logout</string>
    <string name="Classes">CLASSES</string>
    <string name="sub_menu_privacy_policy">Privacy Policy</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="lbl_my_class">My Class</string>
    <string name="lbl_standard_colon">Standard:</string>
    <string name="lbl_division_colon">Division:</string>
    <string name="lbl_total_studnets_colon">Total Students:</string>
    <string name="lbl_todays_attendance">Today&#8217;s Attendance</string>
    <string name="lbl_monthly_attendance">Monthly Attendance</string>
    <string name="lbl_class_grades">Class Grades</string>
    <string name="lbl_events">Events</string>
    <string name="lbl_class_information">Class Information</string>
    <string name="lbl_date_colon">Date:</string>
    <string name="lbl_roll_number_colon">Roll Number:</string>
    <string name="lbl_student_name_colon">Student Name:</string>
    <string name="lbl_late">Late</string>
    <string name="lbl_left_early">Left Early</string>
    <string name="lbl_note_colon">Note:</string>
    <string name="lbl_present">Present</string>
    <string name="lbl_absent">Absent</string>
    <string name="lbl_attendance_date">Attendance Date</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_generate_report">Generate Report</string>
    <string name="menu_my_schedule">My Schedule</string>
    <string name="lbl_schedule_date">Schedule Date</string>
    <string name="lbl_task_date">Task Date</string>
    <string name="lbl_task_list">Task List</string>
    <string name="lbl_add_task">Add Task</string>
    <string name="lbl_from_time">From Time</string>
    <string name="lbl_to_time">To Time</string>
    <string name="lbl_from_date">From Date</string>
    <string name="lbl_to_date">To Date</string>
    <string name="lbl_task_category">Task Category</string>
    <string name="btn_high">High</string>
    <string name="btn_normal">Normal</string>
    <string name="btn_low">Low</string>
    <string name="btn_standard">Standard</string>
    <string name="lbl_personal_information">Personal Information</string>
    <string name="lbl_class_teacher_colon">Class Teacher:</string>
    <string name="lbl_grades">Grades</string>
    <string name="lbl_test_type_colon">Test Type:</string>
    <string name="lbl_subject_colon">Subject:</string>
    <string name="lbl_max_marks_colon">Max Marks:</string>
    <string name="unit_test">Unit Test</string>
    <string name="unit_test_two">Unit Test 2</string>
    <string name="semester">Semester</string>
    <string name="final_test">Final</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_max_marks">Maximum Marks</string>
    <string name="lbl_exam_date">Exam Date</string>
    <string name="lbl_exam_type">Exam Type</string>
    <string name="lbl_marks_obtained_colon">Marks Obtained:</string>
    <string name="lbl_add_exam_marks">Add Exam Marks</string>
    <string name="lbl_subject">Subject</string>
    <string name="error_empty_maximum_marks">Please enter Maximum Marks</string>
    <string name="error_empty_exam_date">Please enter Exam Date</string>
    <string name="error_empty_exam_type">Please enter Exam Type</string>
    <string name="error_empty_subject">Please enter subject</string>
    <string name="error_empty_marks">Please enter marks for roll number %1$s</string>
    <string name="error_greater_than_max_marks">Marks obtained for roll number %1$s cannot be greater than maximum marks.</string>


    <string-array name="test_type">
        <item>@string/unit_test</item>
        <item>@string/unit_test_two</item>
        <item>@string/semester</item>
        <item>@string/final_test</item>
    </string-array>

</resources>
