<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:theme="@style/drawer_style"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_dashboard"
        android:title="@string/menu_dashboard"
        android:icon="@drawable/ic_dasboard"
        />
    <item
        android:id="@+id/nav_attendance"
        android:title="@string/menu_attendance"
        android:visible="false"
        > </item>
    <item
        android:id="@+id/nav_classes"
        android:title="@string/menu_classes"
        android:icon="@drawable/ic_classes"
        > </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout" />

</menu>
