<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_layer_list"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/txt_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/header_text"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/txt_establish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/establish_text"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_text"
                android:textSize="15dp" />

            <View
                android:id="@+id/vw_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="20dp"
                android:background="#eaeded" />

            <TextView
                android:id="@+id/txt_header_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Attendance"
                android:textSize="15dp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barchart_attend"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

            <View
                android:id="@+id/vw_line_2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="20dp"
                android:background="#eaeded" />

            <TextView
                android:id="@+id/txt_header_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="Performance"
                android:textSize="15dp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barchart_perform"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>