<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_main"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <include android:id="@+id/include_attendance_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/content_select_date"
            />
            <TextView
                android:id="@+id/txt_class_info_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/lbl_class_information"
                style="@style/page_header_style"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="@dimen/value_top_margin"
                />
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_value"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3"/>

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_header"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.0"
                    />

                <TextView
                    android:id="@+id/txt_standard_header"
                    style="@style/dashboard_header_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_standard_colon"
                    app:layout_constraintLeft_toRightOf="@+id/guideline_header"
                    android:paddingTop="@dimen/value_top_margin"
                    />

                <TextView
                    android:id="@+id/txt_standard_value"
                    style="@style/dashboard_value_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fourth"
                    app:layout_constraintStart_toStartOf="@id/guideline_value"
                    android:paddingTop="@dimen/value_top_margin"
                    />

                <TextView
                    android:id="@+id/txt_division_header"
                    style="@style/dashboard_header_style"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:paddingTop="@dimen/value_top_margin"
                    android:text="@string/lbl_division_colon"
                    app:layout_constraintLeft_toRightOf="@+id/guideline_header"
                    app:layout_constraintTop_toBottomOf="@+id/txt_standard_header" />
                <TextView
                    android:id="@+id/txt_division_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A"
                    style="@style/dashboard_value_style"
                    app:layout_constraintTop_toBottomOf="@+id/txt_standard_header"
                    app:layout_constraintStart_toStartOf="@id/guideline_value"
                    android:paddingTop="@dimen/value_top_margin"
                    />
                <TextView
                    android:id="@+id/txt_total_students_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_total_studnets_colon"
                    style="@style/dashboard_header_style"
                    app:layout_constraintTop_toBottomOf="@+id/txt_division_header"
                    app:layout_constraintStart_toStartOf="@id/guideline_header"
                    android:paddingTop="@dimen/value_top_margin"
                    />
                <TextView
                    android:id="@+id/txt_total_students_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="60"
                    android:layout_toRightOf="@+id/txt_total_students_header"
                    style="@style/dashboard_value_style"
                    app:layout_constraintTop_toBottomOf="@+id/txt_division_value"
                    app:layout_constraintStart_toStartOf="@id/guideline_value"
                    android:paddingTop="@dimen/value_top_margin"
                    android:paddingBottom="@dimen/value_top_margin"
                    />

            </android.support.constraint.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/color_view_bg"
                android:layout_marginTop="5dp"
                />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_top_margin"
                >

                <TextView
                    android:id="@+id/txt_header_student_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student List"
                    android:textColor="@color/color_primary"
                    style="@style/page_second_header_style"
                    />

                <ImageView
                    android:id="@+id/img_edit"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:clickable="true"
                    />
            </android.support.constraint.ConstraintLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_student_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_top_margin"
                android:layout_marginBottom="@dimen/value_top_margin"
                />

            <LinearLayout
                android:id="@+id/lyt_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                >

                <Button
                    android:id="@+id/btn_submit"
                    style="@style/buttonStyle"
                    android:layout_width="@dimen/small_button_width"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_top_margin"
                    android:text="@string/btn_submit"
                    />

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/buttonStyle"
                    android:layout_width="@dimen/small_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel"
                    android:layout_margin="@dimen/value_top_margin"
                    />

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>