<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:elevation="12dp"
    android:innerRadius="0dp"
    android:thicknessRatio="1.9"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="@dimen/value_top_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_top_margin"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txt_test_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/student_name_style"
            android:text="Weekly Test"
            />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_top_margin">

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"
                />




            <TextView
                android:id="@+id/txt_test_type_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/dashboard_header_style"
                android:text="@string/lbl_test_type_colon"
                app:layout_constraintLeft_toRightOf="@+id/img_student_photo"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                />


            <TextView
                android:id="@+id/txt_test_type_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/dashboard_value_style"
                android:text="Weekly Test"
                app:layout_constraintLeft_toRightOf="@+id/txt_test_type_header"
                android:layout_marginLeft="@dimen/value_top_margin"
                app:layout_constraintRight_toLeftOf="@id/guideline"
                />

            <TextView
                android:id="@+id/txt_max_marks_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/dashboard_header_style"
                android:text="@string/lbl_max_marks_colon"
                app:layout_constraintLeft_toRightOf="@+id/guideline"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                />


            <TextView
                android:id="@+id/txt_max_marks_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/dashboard_value_style"
                android:text="100"
                app:layout_constraintLeft_toRightOf="@+id/txt_max_marks_header"
                android:layout_marginLeft="@dimen/value_top_margin"
                />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/value_top_margin"
            >
            <TextView
                android:id="@+id/txt_subject_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/dashboard_header_style"
                android:text="@string/lbl_subject_colon"

                />
            <TextView
                android:id="@+id/txt_subject_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                style="@style/dashboard_value_style"
                android:layout_marginLeft="@dimen/header_value_margin"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
